# ocs2_ros2_control

./: CMakeLists.txt  README.md  ocs2_ros2_control.xml  package.xml
auto_generated/ridgeback_ur5/dynamics_flow_map/cppad_generated/: dynamics_flow_map_forward_zero.c  dynamics_flow_map_info.c  dynamics_flow_map_jacobian_sparsity.c  dynamics_flow_map_sparse_jacobian.c
auto_generated/ridgeback_ur5/dynamics_guard_surfaces/cppad_generated/: dynamics_guard_surfaces_info.c
auto_generated/ridgeback_ur5/dynamics_jump_map/cppad_generated/: dynamics_jump_map_forward_zero.c  dynamics_jump_map_info.c  dynamics_jump_map_jacobian_sparsity.c  dynamics_jump_map_sparse_jacobian.c
auto_generated/ridgeback_ur5/end_effector_kinematics_orientation/cppad_generated/: end_effector_kinematics_orientation_forward_zero.c  end_effector_kinematics_orientation_info.c  end_effector_kinematics_orientation_jacobian_sparsity.c  end_effector_kinematics_orientation_sparse_jacobian.c
auto_generated/ridgeback_ur5/end_effector_kinematics_position/cppad_generated/: end_effector_kinematics_position_forward_zero.c  end_effector_kinematics_position_info.c  end_effector_kinematics_position_jacobian_sparsity.c  end_effector_kinematics_position_sparse_jacobian.c
auto_generated/ridgeback_ur5/end_effector_kinematics_velocity/cppad_generated/: end_effector_kinematics_velocity_forward_zero.c  end_effector_kinematics_velocity_info.c  end_effector_kinematics_velocity_jacobian_sparsity.c  end_effector_kinematics_velocity_sparse_jacobian.c
auto_generated/ridgeback_ur5/self_collision_distance_intermediate/cppad_generated/: self_collision_distance_intermediate_forward_zero.c  self_collision_distance_intermediate_info.c  self_collision_distance_intermediate_jacobian_sparsity.c  self_collision_distance_intermediate_sparse_jacobian.c
auto_generated/ridgeback_ur5/self_collision_links_intermediate/cppad_generated/: self_collision_links_intermediate_forward_zero.c  self_collision_links_intermediate_info.c  self_collision_links_intermediate_jacobian_sparsity.c  self_collision_links_intermediate_sparse_jacobian.c
config/: common_params.yaml
config/ridgeback_ur5/: ridgeback_ur5_initial_pose.yaml  ridgeback_ur5_ros2_control.yaml  task.info
description/ridgeback_ur5/urdf/: ridgeback_ur5.urdf.xacro
description/urdf/: ridgeback_ur5.urdf.xacro
include/ocs2_ros2_control/control/: Ocs2Ros2Controller.h
include/ocs2_ros2_control/hardware/: RidgebackUr5Hardware.hpp
include/ocs2_ros2_control/visualization/: MobileManipulatorVisualization.h
launch/: ridgeback_ur5_bringup.launch.py
launch/command/: marker.launch.py  trajectory.launch.py  twist.launch.py
launch/common/: config_utils.py  urdf_utils.py
launch/ridgeback_ur5/: ridgeback_ur5_bringup.launch.py  ridgeback_ur5_control.launch.py  ridgeback_ur5_core.launch.py  ridgeback_ur5_entry.launch.py  ridgeback_ur5_mpc.launch.py
launch/visualization/: visualize.launch.py
rviz/: mobile_manipulator.rviz
src/command/: MobileManipulatorMarkerTarget.cpp  MobileManipulatorTrajectoryTarget.cpp  MobileManipulatorTwistTarget.cpp
src/control/: Ocs2Ros2Controller.cpp
src/hardware/: RidgebackUr5Hardware.cpp
src/mpc/: MobileManipulatorMpcNode.cpp
src/visualization/: MobileManipulatorVisualization.cpp
